--- a/Libs/AspieTech.Kernel/AspieTech.Builder/App.config
+++ b/Libs/AspieTech.Kernel/AspieTech.Builder/App.config
@@ -1,6 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
+  </startup>
+  <appSettings>
+    <add key="i181ResourcesPath" value="D:\Mes projets\AspieTech\Libs\AspieTech.Kernel\AspieTech.LocalizationHandler\i18nResources\"/>
+    <add key="i181JsonResourcesPath" value="D:\Mes projets\AspieTech\Libs\SharedSuff\i18nJsonResources\"/>
+  </appSettings>
 </configuration>
