--- a/Libs/AspieTech.Kernel/AspieTech.LocalizationHandler/AspieTech.LocalizationHandler.csproj
+++ b/Libs/AspieTech.Kernel/AspieTech.LocalizationHandler/AspieTech.LocalizationHandler.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AspieTech.LocalizationHandler</RootNamespace>
     <AssemblyName>AspieTech.LocalizationHandler</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,8 +31,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\Packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,12 +57,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AspieTech.Kernel.fr.resx</DependentUpon>
     </Compile>
-    <Compile Include="LocalizationProvider.cs" />
+    <Compile Include="ResourceHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceSerials\ECAAHandlerCodes.cs" />
     <Compile Include="ResourceSerials\EKernelCodes.cs" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="i18nResources\AspieTech.Kernel.en.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
@@ -72,6 +77,9 @@
       <Project>{e7bf3346-b7de-4dbc-ab42-d17e148d3b1d}</Project>
       <Name>AspieTech.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
