--- a/Libs/AspieTech.Kernel/AspieTech.LocalizationHandler/AspieTech.LocalizationHandler.csproj
+++ b/Libs/AspieTech.Kernel/AspieTech.LocalizationHandler/AspieTech.LocalizationHandler.csproj
@@ -58,6 +58,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AspieTech.Kernel.fr.resx</DependentUpon>
     </Compile>
+    <Compile Include="IResourceHandler.cs" />
     <Compile Include="ResourceHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceSerials\ECAAHandlerCodes.cs" />
