--- a/Libs/AspieTech.Kernel/AspieTech.LocalizationHandler/AspieTech.LocalizationHandler.csproj
+++ b/Libs/AspieTech.Kernel/AspieTech.LocalizationHandler/AspieTech.LocalizationHandler.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Attributes\LocalizationUtilityAttribute.cs" />
     <Compile Include="Attributes\ResourceSerialDetailsAttribute.cs" />
+    <Compile Include="Enumerations\EResourceType.cs" />
     <Compile Include="Enumerations\ESolutionPart.cs" />
     <Compile Include="i18nResources\AspieTech.Kernel.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -64,7 +65,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AspieTech.Kernel.fr.resx</DependentUpon>
     </Compile>
-    <Compile Include="IResourceHandler.cs" />
     <Compile Include="ResourceHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceSerials\EKernelCode.cs" />
@@ -84,6 +84,14 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AspieTech.BridgeHandler\AspieTech.BridgeHandler.csproj">
+      <Project>{7597e308-dd94-4518-a354-2884f2118ba9}</Project>
+      <Name>AspieTech.BridgeHandler</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AspieTech.Engine\AspieTech.Engine.csproj">
+      <Project>{d41b9302-f6f1-4d05-8005-3e457677dba5}</Project>
+      <Name>AspieTech.Engine</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AspieTech.Model\AspieTech.Model.csproj">
       <Project>{e7bf3346-b7de-4dbc-ab42-d17e148d3b1d}</Project>
       <Name>AspieTech.Model</Name>
