--- a/Libs/AspieTech.Kernel/AspieTech.Builder/NLog.config
+++ b/Libs/AspieTech.Kernel/AspieTech.Builder/NLog.config
@@ -13,15 +13,26 @@
 
   <targets async="true">
     <target xsi:type="File"
-            name="default"
-            layout="${longdate} - ${level:uppercase=true}: ${message}${onexception:${newline}EXCEPTION\: ${exception:format=ToString}}"
-            fileName="${specialfolder:ApplicationData}\${appName}\Debug.log"
-            keepFileOpen="false"
             archiveFileName="${specialfolder:ApplicationData}\${appName}\Debug_${shortdate}.{##}.log"
             archiveNumbering="Sequence"
             archiveEvery="Day"
+            fileName="C:\Logs\${appName}.log"
+            keepFileOpen="false"
+            layout="--------------------- ${level} (${longdate}) ---------------------${newline}
+            ${newline}
+            Call Site: ${callsite}${newline}
+            Exception Type: ${exception:format=Type}${newline}
+            Exception Message: ${exception:format=Message}${newline}
+            Stack Trace: ${exception:format=StackTrace}${newline}
+            Additional Info: ${message}${newline}"
+            name="default"
             maxArchiveFiles="30"
             />
+    <!--
+    
+            fileName="${specialfolder:ApplicationData}\${appName}.log"
+            layout="${longdate} - ${level:uppercase=true}: ${message}${onexception:${newline}EXCEPTION\: ${exception:format=ToString}}"
+    -->
 
     <target xsi:type="EventLog"
             name="eventlog"
