--- a/Libs/AspieTech.Kernel/AspieTech.Builder/NLog.config
+++ b/Libs/AspieTech.Kernel/AspieTech.Builder/NLog.config
@@ -16,7 +16,7 @@
             archiveFileName="${specialfolder:ApplicationData}\${appName}\Debug_${shortdate}.{##}.log"
             archiveNumbering="Sequence"
             archiveEvery="Day"
-            fileName="C:\Logs\${appName}.log"
+            fileName="${specialfolder:folder=ApplicationData}/Logs/${appName}.log"
             keepFileOpen="false"
             layout="--------------------- ${level} (${longdate}) ---------------------${newline}
             ${newline}
@@ -25,7 +25,7 @@
             Exception Message: ${exception:format=Message}${newline}
             Stack Trace: ${exception:format=StackTrace}${newline}
             Additional Info: ${message}${newline}"
-            name="default"
+            name="Builder"
             maxArchiveFiles="30"
             />
     <!--
@@ -40,7 +40,6 @@
             layout="${message}${newline}${exception:format=ToString}"/>
   </targets>
   <rules>
-    <logger name="*" writeTo="default" minlevel="Info" />
-    <logger name="*" writeTo="eventlog" minlevel="Error" />
+    <logger name="*" writeTo="Builder" minlevel="Info" />
   </rules>
 </nlog>
