--- a/Libs/AspieTech.Kernel/AspieTech.Builder/NLog.config
+++ b/Libs/AspieTech.Kernel/AspieTech.Builder/NLog.config
@@ -1,45 +1,39 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
-      autoReload="true"
-      throwExceptions="false"
-      internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
-
-  <!-- optional, add some variables
-  https://github.com/nlog/NLog/wiki/Configuration-file#variables
-  -->
+      xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd">
   <variable name="appName" value="AspieTech.Builder" />
-
+  <variable name="logDirectory" value="D:\Mes projets\AspieTech\Logs\${shortdate}"/>
   <targets async="true">
     <target xsi:type="File"
-            archiveFileName="${specialfolder:ApplicationData}\${appName}\Debug_${shortdate}.{##}.log"
-            archiveNumbering="Sequence"
-            archiveEvery="Day"
-            fileName="${specialfolder:folder=ApplicationData}/Logs/${appName}.log"
+            fileName="${logDirectory}\${appName}.log"
             keepFileOpen="false"
             layout="--------------------- ${level} (${longdate}) ---------------------${newline}
-            ${newline}
             Call Site: ${callsite}${newline}
             Exception Type: ${exception:format=Type}${newline}
             Exception Message: ${exception:format=Message}${newline}
             Stack Trace: ${exception:format=StackTrace}${newline}
             Additional Info: ${message}${newline}"
-            name="Builder"
-            maxArchiveFiles="30"
-            />
-    <!--
-    
-            fileName="${specialfolder:ApplicationData}\${appName}.log"
-            layout="${longdate} - ${level:uppercase=true}: ${message}${onexception:${newline}EXCEPTION\: ${exception:format=ToString}}"
-    -->
-
-    <target xsi:type="EventLog"
-            name="eventlog"
-            source="${appName}"
-            layout="${message}${newline}${exception:format=ToString}"/>
+            name="logfile"
+            maxArchiveFiles="30"/>
+    <target xsi:type="ColoredConsole"
+            layout="--------------------- ${level} (${longdate}) ---------------------${newline}
+            Call Site: ${callsite}${newline}
+            Exception Type: ${exception:format=Type}${newline}
+            Exception Message: ${exception:format=Message}${newline}
+            Stack Trace: ${exception:format=StackTrace}${newline}
+            Additional Info: ${message}${newline}"
+            name="console"
+            useDefaultRowHighlightingRules="false">
+      <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
+      <highlight-row condition="level == LogLevel.Info" foregroundColor="Gray" />
+      <highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow" />
+      <highlight-row condition="level == LogLevel.Error" foregroundColor="Red" />
+      <highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red" />
+    </target>
   </targets>
   <rules>
-    <logger name="*" writeTo="Builder" minlevel="Info" />
+    <logger name="*" writeTo="logfile" minlevel="Info" />
+    <logger name="*" writeTo="console" minlevel="Info" />
   </rules>
 </nlog>
