--- a/Libs/AspieTech.Kernel/AspieTech.BusinessLogicLayer/AspieTech.BusinessLogicLayer.csproj
+++ b/Libs/AspieTech.Kernel/AspieTech.BusinessLogicLayer/AspieTech.BusinessLogicLayer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7597E308-DD94-4518-A354-2884F2118BA9}</ProjectGuid>
+    <ProjectGuid>{D3E08243-00BE-4D1A-909A-2D30AB348F70}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AspieTech.BridgeHandler</RootNamespace>
-    <AssemblyName>AspieTech.BridgeHandler</AssemblyName>
+    <RootNamespace>AspieTech.BusinessLayer</RootNamespace>
+    <AssemblyName>AspieTech.BusinessLayer</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\..\Packages\NLog.4.4.11\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,18 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataAccessLayer\Entities\ILogEventInfoEntity.cs" />
-    <Compile Include="DataAccessLayer\ICAAFactoryContainer.cs" />
-    <Compile Include="DataAccessLayer\IFactory.cs" />
-    <Compile Include="DataAccessLayer\IFactoryContainer.cs" />
-    <Compile Include="DataAccessLayer\Factories\ILogEventInfoFactory.cs" />
-    <Compile Include="LoggerHandler\ILocalizableLogHandler.cs" />
-    <Compile Include="LocalizationHandler\IResourceHandler.cs" />
-    <Compile Include="LocalizationHandler\IResourceResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="BusinessLogicLayer\Entities\" />
+    <ProjectReference Include="..\AspieTech.BridgeHandler\AspieTech.BridgeHandler.csproj">
+      <Project>{7597E308-DD94-4518-A354-2884F2118BA9}</Project>
+      <Name>AspieTech.BridgeHandler</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Entities\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
