ajout de gestion de repository

--- a/Libs/AspieTech.Kernel/AspieTech.Builder/appsettings.json
+++ b/Libs/AspieTech.Kernel/AspieTech.Builder/appsettings.json
@@ -1,5 +1,8 @@
 {
   "resourceFilePath": "C:\\ProjetsPerso\\AspieTech\\Libs\\SharedSuff\\i18nJsonResources",
+  "ConnectionStrings": {
+    "LogsDB": "Server=(localdb)\\mssqllocaldb;Database=EFGetStarted.ConsoleApp.NewDb;Trusted_Connection=True;"
+  },
   "exclude": [
     "**/bin",
     "**/bower_components",
