--- a/Libs/AspieTech.Kernel/AspieTech.DependencyInjection/AspieTech.DependencyInjection.csproj
+++ b/Libs/AspieTech.Kernel/AspieTech.DependencyInjection/AspieTech.DependencyInjection.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.0" />
   </ItemGroup>
@@ -12,8 +13,8 @@
   <ItemGroup>
     <ProjectReference Include="..\AspieTech.DependencyInjection.Abstractions\AspieTech.DependencyInjection.Abstractions.csproj" />
     <ProjectReference Include="..\AspieTech.Localization\AspieTech.Localization.csproj" />
-    <ProjectReference Include="..\AspieTech.Logger.DataAccessLayer\AspieTech.Logger.DataAccessLayer.csproj" />
     <ProjectReference Include="..\AspieTech.Logger\AspieTech.Logger.csproj" />
+    <ProjectReference Include="..\AspieTech.Repository\AspieTech.Repository.csproj" />
   </ItemGroup>
 
 </Project>
