stored procedure manager

--- a/Libs/AspieTech.Kernel/AspieTech.Localization/AspieTech.Localization.csproj
+++ b/Libs/AspieTech.Kernel/AspieTech.Localization/AspieTech.Localization.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\AspieTech.Utils.Enums\AspieTech.Utils.Enums\AspieTech.Utils.Enums.csproj" />
+    <ProjectReference Include="..\..\AspieTech.Utils\AspieTech.Utils\AspieTech.Utils.csproj" />
     <ProjectReference Include="..\AspieTech.DependencyInjection.Abstractions\AspieTech.DependencyInjection.Abstractions.csproj" />
   </ItemGroup>
 
