--- a/Libs/AspieTech.Kernel/AspieTech.DependencyInjection.Abstractions/AspieTech.DependencyInjection.Abstractions.csproj
+++ b/Libs/AspieTech.Kernel/AspieTech.DependencyInjection.Abstractions/AspieTech.DependencyInjection.Abstractions.csproj
@@ -19,4 +19,8 @@
     <None Remove="Logger\Models\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.5.1" />
+  </ItemGroup>
+
 </Project>
